--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <header>
+        <h1>Horiseon</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,7 +43,15 @@
             </ul>
         </div>
     </div>
+    -->
+    <main>
+        <img src="bootcamp\week-2-mini-project\assets\images\digital-marketing-meeting.jpg"
+            alt="Four people in a meeting">
+
+    </main>
     <div class="hero"></div>
+
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
