added SEO section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
     <header>
         <h1>Horiseon</h1>
-
         <nav>
             <ul>
                 <li>
@@ -44,14 +43,24 @@
         </div>
     </div>
     -->
+    <!--MAIN is linked to CSS background image, workaround-->
     <main>
-        <img src="bootcamp\week-2-mini-project\assets\images\digital-marketing-meeting.jpg"
-            alt="Four people in a meeting">
 
     </main>
-    <div class="hero"></div>
-
-
+    <!--Break these into sections as well as including "aside"-->
+    <section id="content">
+        <section id="search-engine-optimization">
+            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
+                class="float-left" />
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
+            </p>
+        </section>
+    </section>
+    <!--
     <div class="content">
         <div class="search-engine-optimization">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
@@ -84,6 +93,9 @@
             </p>
         </div>
     </div>
+    -->
+
+    <!--This is the aside-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -110,6 +122,7 @@
             </p>
         </div>
     </div>
+    <!--This is the footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
