--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>website</title>
 </head>
 
 <body>
     <header>
-        <h1>Horiseon</h1>
+        <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -25,42 +25,7 @@
         </nav>
     </header>
 
-    <!--
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    -->
-    <!--MAIN is linked to CSS background image, workaround-->
-    <main>
-
-    </main>
-    <!--Break these into sections as well as including "aside"-->
-    <section id="content">
-        <section id="search-engine-optimization">
-            <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
-                class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
-        </section>
-    </section>
-    <!--
+    <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="https://static.bc-edx.com/coding/full-stack/01-HTML-Git-CSS/assets/search-engine-optimization.jpg"
@@ -93,9 +58,6 @@
             </p>
         </div>
     </div>
-    -->
-
-    <!--This is the aside-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -122,7 +84,6 @@
             </p>
         </div>
     </div>
-    <!--This is the footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
